@@ -23,7 +23,6 @@
 
 #define DEBUG_LOG(fmt) if(debug)printf(fmt)
 
-
 /*
  *	Check if the given character is a valid symbol table identifier
  *	or an overlay character. The set is different for compressed
@@ -41,6 +40,238 @@ static int valid_sym_table_uncompressed(char c)
 {
 	return (c == '/' || c == '\\' || (c >= 0x41 && c <= 0x5A)
 		    || (c >= 0x48 && c <= 0x57)); /* [\/\\A-Z0-9] */
+}
+
+
+typedef struct gps2apr_syms {
+	const char gps[3];
+	const char aprs[3];
+	int  flags;
+} gps2aprs_syms_t;
+
+// FIXME: Some symbols have 3 characters,
+//        others take 3rd as overlay...
+//        Add control flags below!
+
+static const gps2aprs_syms_t gps2aprsSyms[] = {
+  { "A0", "\\0", 0 },
+  { "A1", "\\1", 0 },
+  { "A2", "\\2", 0 },
+  { "A3", "\\3", 0 },
+  { "A4", "\\4", 0 },
+  { "A5", "\\5", 0 },
+  { "A6", "\\6", 0 },
+  { "A7", "\\7", 0 },
+  { "A8", "\\8", 0 },
+  { "A9", "\\9", 0 },
+  { "AA", "\\A", 0 },
+  { "AB", "\\B", 0 },
+  { "AC", "\\C", 0 },
+  { "AD", "\\D", 0 },
+  { "AE", "\\E", 0 },
+  { "AF", "\\F", 0 },
+  { "AG", "\\G", 0 },
+  { "AH", "\\H", 0 },
+  { "AI", "\\I", 0 },
+  { "AJ", "\\J", 0 },
+  { "AK", "\\K", 0 },
+  { "AL", "\\L", 0 },
+  { "AM", "\\M", 0 },
+  { "AN", "\\N", 0 },
+  { "AO", "\\O", 0 },
+  { "AP", "\\P", 0 },
+  { "AQ", "\\Q", 0 },
+  { "AR", "\\R", 0 },
+  { "AS", "\\S", 0 },
+  { "AT", "\\T", 0 },
+  { "AU", "\\U", 0 },
+  { "AV", "\\V", 0 },
+  { "AW", "\\W", 0 },
+  { "AX", "\\X", 0 },
+  { "AY", "\\Y", 0 },
+  { "AZ", "\\Z", 0 },
+  { "BB", "/!",  0 },
+  { "BC", "/\"", 0 },
+  { "BD", "/#", 0 },
+  { "BE", "/$", 0 },
+  { "BF", "/%", 0 },
+  { "BG", "/&", 0 },
+  { "BH", "/'", 0 },
+  { "BI", "/(", 0 },
+  { "BJ", "/)", 0 },
+  { "BK", "/*", 0 },
+  { "BL", "/+", 0 },
+  { "BM", "/,", 0 },
+  { "BN", "/-", 0 },
+  { "BO", "/.", 0 },
+  { "BP", "//", 0 },
+  { "DS", "\\[", 0 },
+  { "DT", "\\\\", 0 },
+  { "DU", "\\]", 0 },
+  { "DV", "\\^", 0 },
+  { "DW", "\\_", 0 },
+  { "DX", "\\`", 0 },
+  { "HS", "/[", 0 },
+  { "HT", "/\\", 0 },
+  { "HU", "/]", 0 },
+  { "HV", "/^", 0 },
+  { "HW", "/_", 0 },
+  { "HX", "/`", 0 },
+  { "J1", "/{", 0 },
+  { "J2", "/|", 0 },
+  { "J3", "/}", 0 },
+  { "J4", "/~", 0 },
+  { "LA", "/a", 0 },
+  { "LB", "/b", 0 },
+  { "LC", "/c", 0 },
+  { "LD", "/d", 0 },
+  { "LE", "/e", 0 },
+  { "LF", "/f", 0 },
+  { "LG", "/g", 0 },
+  { "LH", "/h", 0 },
+  { "LI", "/i", 0 },
+  { "LJ", "/j", 0 },
+  { "LK", "/k", 0 },
+  { "LL", "/l", 0 },
+  { "LM", "/m", 0 },
+  { "LN", "/n", 0 },
+  { "LO", "/o", 0 },
+  { "LP", "/p", 0 },
+  { "LQ", "/q", 0 },
+  { "LR", "/r", 0 },
+  { "LS", "/s", 0 },
+  { "LT", "/t", 0 },
+  { "LU", "/u", 0 },
+  { "LV", "/v", 0 },
+  { "LW", "/w", 0 },
+  { "LX", "/x", 0 },
+  { "LY", "/y", 0 },
+  { "LZ", "/z", 0 },
+  { "MR", "/:", 0 },
+  { "MS", "/;", 0 },
+  { "MT", "/<", 0 },
+  { "MU", "/=", 0 },
+  { "MV", "/>", 0 },
+  { "MW", "/?", 0 },
+  { "MX", "/@", 0 },
+  { "NR", "\\:", 0 },
+  { "NS", "\\;", 0 },
+  { "NT", "\\<", 0 },
+  { "NU", "\\=", 0 },
+  { "NV", "\\>", 0 },
+  { "NW", "\\?", 0 },
+  { "NX", "\\@", 0 },
+  { "OB", "\\!", 0 },
+  { "OC", "\\\"", 0 },
+  { "OD", "\\#", 0 },
+  { "OE", "\\$", 0 },
+  { "OF", "\\%", 0 },
+  { "OG", "\\&", 0 },
+  { "OH", "\\'", 0 },
+  { "OI", "\\(", 0 },
+  { "OJ", "\\)", 0 },
+  { "OK", "\\*", 0 },
+  { "OL", "\\+", 0 },
+  { "OM", "\\,", 0 },
+  { "ON", "\\-", 0 },
+  { "OO", "\\.", 0 },
+  { "OP", "\\/", 0 },
+  { "P0", "/0", 0 },
+  { "P1", "/1", 0 },
+  { "P2", "/2", 0 },
+  { "P3", "/3", 0 },
+  { "P4", "/4", 0 },
+  { "P5", "/5", 0 },
+  { "P6", "/6", 0 },
+  { "P7", "/7", 0 },
+  { "P8", "/8", 0 },
+  { "P9", "/9", 0 },
+  { "PA", "/A", 0 },
+  { "PB", "/B", 0 },
+  { "PC", "/C", 0 },
+  { "PD", "/D", 0 },
+  { "PE", "/E", 0 },
+  { "PF", "/F", 0 },
+  { "PG", "/G", 0 },
+  { "PH", "/H", 0 },
+  { "PI", "/I", 0 },
+  { "PJ", "/J", 0 },
+  { "PK", "/K", 0 },
+  { "PL", "/L", 0 },
+  { "PM", "/M", 0 },
+  { "PN", "/N", 0 },
+  { "PO", "/O", 0 },
+  { "PP", "/P", 0 },
+  { "PQ", "/Q", 0 },
+  { "PR", "/R", 0 },
+  { "PS", "/S", 0 },
+  { "PT", "/T", 0 },
+  { "PU", "/U", 0 },
+  { "PV", "/V", 0 },
+  { "PW", "/W", 0 },
+  { "PX", "/X", 0 },
+  { "PY", "/Y", 0 },
+  { "PZ", "/Z", 0 },
+  { "Q1", "\\{", 0 },
+  { "Q2", "\\|", 0 },
+  { "Q3", "\\}", 0 },
+  { "Q4", "\\~", 0 },
+  { "SA", "\\a", 0 },
+  { "SB", "\\b", 0 },
+  { "SC", "\\c", 0 },
+  { "SD", "\\d", 0 },
+  { "SE", "\\e", 0 },
+  { "SF", "\\f", 0 },
+  { "SG", "\\g", 0 },
+  { "SH", "\\h", 0 },
+  { "SI", "\\i", 0 },
+  { "SJ", "\\j", 0 },
+  { "SK", "\\k", 0 },
+  { "SL", "\\l", 0 },
+  { "SM", "\\m", 0 },
+  { "SN", "\\n", 0 },
+  { "SO", "\\o", 0 },
+  { "SP", "\\p", 0 },
+  { "SQ", "\\q", 0 },
+  { "SR", "\\r", 0 },
+  { "SS", "\\s", 0 },
+  { "ST", "\\t", 0 },
+  { "SU", "\\u", 0 },
+  { "SV", "\\v", 0 },
+  { "SW", "\\w", 0 },
+  { "SX", "\\x", 0 },
+  { "SY", "\\y", 0 },
+  { "SZ", "\\z", 0 },
+};
+
+static int gps2aprs_syms_count = sizeof(gps2aprsSyms) / sizeof(gps2aprsSyms[0]);
+
+int parse_gps2aprs_symbol(const char *gpsxxx, char *aprssymbol) {
+	int i, mid, high, low;
+	char gps[3];
+	gps[0] = gpsxxx[0];
+	gps[1] = gpsxxx[1];
+	gps[2] = 0;
+	low = 0;
+	high = gps2aprs_syms_count-1;
+	while (low < high) {
+	  mid = (low + high) >> 1; // divide by 2
+	  i = strcmp(gps, gps2aprsSyms[mid].gps);
+	  if (debug) printf("GPS2APRS: '%s' '%s', low=%d mid=%d high=%d\n",
+			    gps, gps2aprsSyms[mid].gps, low, mid, high);
+	  if (i == 0) {
+	    // Exact match
+	    strcpy(aprssymbol, gps2aprsSyms[mid].aprs);
+	    // FIXME: overlay ???
+	    return 0;
+	  }
+	  if (i > 0) {
+	    low = mid+1;
+	  } else {
+	    high = mid-1;
+	  }
+	}
+	return i;
 }
 
 /*
